# serializer version: 1
# name: test_create_anonymous_document
  dict({
    'business_id': '1234567-8',
    'content': dict({
      'formData': dict({
        'birthDate': '3.11.1957',
        'firstName': 'Dolph',
        'lastName': 'Lundgren',
      }),
      'reasonForApplication': 'No reason, just testing',
    }),
    'content_schema_url': 'https://schema.fi',
    'created_at': '2021-06-30T12:00:00+03:00',
    'deletable': False,
    'delete_after': None,
    'document_language': 'en',
    'draft': False,
    'human_readable_type': dict({
      'en': 'Mysterious Form',
    }),
    'locked_after': None,
    'metadata': dict({
      'created_by': 'alex',
      'testing': True,
    }),
    'service': 'service 34',
    'status': dict({
      'activities': list([
      ]),
      'status_display_values': dict({
        'fi': 'Käsitelty',
      }),
      'timestamp': '2021-06-30T12:00:00+03:00',
      'value': 'handled',
    }),
    'status_histories': list([
      dict({
        'activities': list([
        ]),
        'status_display_values': dict({
          'fi': 'Käsitelty',
        }),
        'timestamp': '2021-06-30T12:00:00+03:00',
        'value': 'handled',
      }),
    ]),
    'tos_function_id': 'f917d43aab76420bb2ec53f6684da7f7',
    'tos_record_id': '89837a682b5d410e861f8f3688154163',
    'transaction_id': 'cf0a341b-6bfd-4f59-8d7c-87bf62ba837b',
    'type': 'mysterious form',
    'updated_at': '2021-06-30T12:00:00+03:00',
    'user_id': None,
  })
# ---
# name: test_create_authenticated_document
  dict({
    'attachments': list([
    ]),
    'business_id': '1234567-8',
    'content': dict({
      'formData': dict({
        'birthDate': '3.11.1957',
        'firstName': 'Dolph',
        'lastName': 'Lundgren',
      }),
      'reasonForApplication': 'No reason, just testing',
    }),
    'content_schema_url': 'https://schema.fi',
    'created_at': '2021-06-30T12:00:00+03:00',
    'deletable': False,
    'delete_after': '2022-12-12',
    'document_language': 'en',
    'draft': False,
    'human_readable_type': dict({
      'en': 'Mysterious Form',
    }),
    'locked_after': None,
    'metadata': dict({
      'created_by': 'alex',
      'testing': True,
    }),
    'service': 'service 36',
    'status': dict({
      'activities': list([
      ]),
      'status_display_values': dict({
        'fi': 'Käsitelty',
      }),
      'timestamp': '2021-06-30T12:00:00+03:00',
      'value': 'handled',
    }),
    'status_histories': list([
      dict({
        'activities': list([
        ]),
        'status_display_values': dict({
          'fi': 'Käsitelty',
        }),
        'timestamp': '2021-06-30T12:00:00+03:00',
        'value': 'handled',
      }),
    ]),
    'tos_function_id': 'f917d43aab76420bb2ec53f6684da7f7',
    'tos_record_id': '89837a682b5d410e861f8f3688154163',
    'transaction_id': 'cf0a341b-6bfd-4f59-8d7c-87bf62ba837b',
    'type': 'mysterious form',
    'updated_at': '2021-06-30T12:00:00+03:00',
  })
# ---
